--- a/components/com_kunena/admin/language/all/manifests/com_kunena_sl-SI.xml
+++ b/components/com_kunena/admin/language/all/manifests/com_kunena_sl-SI.xml
@@ -36,6 +36,7 @@
 			<filename>sl-SI.com_kunena.templates.ini</filename>
 			<filename>sl-SI.com_kunena.tpl_blue_eagle.ini</filename>
 			<filename>sl-SI.com_kunena.views.ini</filename>
+			<filename>sl-SI.kunena_tmpl_crypsis</filename>
 		</files>
 	</fileset>
 </extension>
