--- a/components/com_kunena/admin/language/all/manifests/com_kunena_es-ES.xml
+++ b/components/com_kunena/admin/language/all/manifests/com_kunena_es-ES.xml
@@ -37,6 +37,7 @@
 			<filename>es-ES.com_kunena.templates.ini</filename>
 			<filename>es-ES.com_kunena.tpl_blue_eagle.ini</filename>
 			<filename>es-ES.com_kunena.views.ini</filename>
+			<filename>es-ES.kunena_tmpl_crypsis</filename>
 		</files>
 	</fileset>
 </extension>
