--- a/components/com_kunena/admin/language/all/manifests/com_kunena_km-KH.xml
+++ b/components/com_kunena/admin/language/all/manifests/com_kunena_km-KH.xml
@@ -37,6 +37,7 @@
 			<filename>km-KH.com_kunena.templates.ini</filename>
 			<filename>km-KH.com_kunena.tpl_blue_eagle.ini</filename>
 			<filename>km-KH.com_kunena.views.ini</filename>
+			<filename>km-KH.kunena_tmpl_crypsis</filename>
 		</files>
 	</fileset>
 </extension>
