--- a/components/com_kunena/admin/language/all/manifests/com_kunena_af-ZA.xml
+++ b/components/com_kunena/admin/language/all/manifests/com_kunena_af-ZA.xml
@@ -37,7 +37,7 @@
 			<filename>af-ZA.com_kunena.templates.ini</filename>
 			<filename>af-ZA.com_kunena.tpl_blue_eagle.ini</filename>
 			<filename>af-ZA.com_kunena.views.ini</filename>
-			<filename>af-ZA.kunena_tmpl_crypsis</filename>
+			<filename>af-ZA.kunena_tmpl_crypsis.ini</filename>
 		</files>
 	</fileset>
 </extension>
