--- a/components/com_kunena/admin/language/all/manifests/com_kunena_eo-XX.xml
+++ b/components/com_kunena/admin/language/all/manifests/com_kunena_eo-XX.xml
@@ -36,7 +36,7 @@
 			<filename>eo-XX.com_kunena.templates.ini</filename>
 			<filename>eo-XX.com_kunena.tpl_blue_eagle.ini</filename>
 			<filename>eo-XX.com_kunena.views.ini</filename>
-			<filename>eo-XX.kunena_tmpl_crypsis</filename>
+			<filename>eo-XX.kunena_tmpl_crypsis.ini</filename>
 		</files>
 	</fileset>
 </extension>
