[K4.0] Crypsis : When ReCaptcha plugin is enabled registered users can't write #3173

--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -174,8 +174,6 @@ COM_KUNENA_A_BOARD_OFFLINE_MES="Forum Offline Message"
 COM_KUNENA_A_BOARD_TITLE="Forum Title"
 COM_KUNENA_A_BOARD_TITLE_DESC="The name of your forum"
 COM_KUNENA_A_CAPTCHA_CONFIGURATION="CAPTCHA Configuration"
-COM_KUNENA_A_CAPTCHA_GUESTS="CAPTCHA Challenge for Guests"
-COM_KUNENA_A_CAPTCHA_GUESTS_DESC="Set to <em>Yes</em> if you want to display CAPTCHA challenges to guests. CAPTCHAs can be used to minimize automated posting to your forum. This is done by generating a challenge that is relatively easy for people to solve, thus distinguishing humans from computers."
 COM_KUNENA_A_CAPTCHA_POST_LIMIT="CAPTCHA Challenge for Users"
 COM_KUNENA_A_CAPTCHA_POST_LIMIT_DESC="Enter a number of posts. All users below this threshold are challenged by CAPTCHA, hopefully making spammers to find easier targets. Trusted users like moderators or administrators are not affected by this setting."
 COM_KUNENA_A_CATEGORY_SUBSCRIPTIONS="Category Subscriptions"
@@ -511,6 +509,11 @@ COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_SECRET_LABEL="The Twitter consumer
 COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_SECRET_DESC="The Twitter consumer secret to connect to API"
 COM_KUNENA_ADMIN_CONFIG_MAX_LINKS="Max Links in message"
 COM_KUNENA_ADMIN_CONFIG_MAX_LINKS_DESC="Enter here the max links in a message to prevent spam"
+COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_TITLE="For who the captcha should be displayed ?"
+COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_DESC="Choose if guest or registered users can be see captcha or nobody to disable it completly"
+COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_NOBODY="Nobody"
+COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_REGISTERED_USERS="Registered Users"
+COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_GUESTS_USERS="Guests Users"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
