[K4.0] Crypsis : When ReCaptcha plugin is enabled registered users can't write #3173 (part 2)

--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -509,11 +509,11 @@ COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_SECRET_LABEL="The Twitter consumer
 COM_KUNENA_CONFIGURATION_TWITTER_API_CONSUMER_SECRET_DESC="The Twitter consumer secret to connect to API"
 COM_KUNENA_ADMIN_CONFIG_MAX_LINKS="Max Links in message"
 COM_KUNENA_ADMIN_CONFIG_MAX_LINKS_DESC="Enter here the max links in a message to prevent spam"
-COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_TITLE="For who the captcha should be displayed ?"
-COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_DESC="Choose if guest or registered users can be see captcha or nobody to disable it completly"
+COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_TITLE="Display Captcha for :"
+COM_KUNENA_CONFIGURATION_CAPTCHA_FOR_WHO_DESC="Choose if guest or registered users can be see captcha or nobody to disable it completely"
 COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_NOBODY="Nobody"
 COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_REGISTERED_USERS="Registered Users"
-COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_GUESTS_USERS="Guests Users"
+COM_KUNENA_CONFIGURATION_OPTION_CAPTCHA_GUESTS_REGISTERED_USERS="Guests Users And Registered Users"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
