--- a/components/com_kunena/admin/language/ca-ES/ca-ES.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/ca-ES/ca-ES.com_kunena.sys.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -58,7 +58,7 @@ COM_KUNENA_MENU_SELECTEDVIEW="Selecciona Vista"
 COM_KUNENA_MENU_TOPIC_CREATE="Crea tema"
 COM_KUNENA_MENU_TOPIC_EDIT="Edita tema"
 COM_KUNENA_MENU_TOPIC_REPLY="Respon tema"
-COM_KUNENA_MENU_USERID="ID d'Usuari/a"
+; COM_KUNENA_MENU_USERID="UserId"
 COM_KUNENA_SHOW_12_HOURS="12 Hores"
 COM_KUNENA_SHOW_24_HOURS="24 Hores"
 COM_KUNENA_SHOW_48_HOURS="48 Hores"
