--- a/components/com_kunena/admin/language/de-DE/de-DE.plg_kunena_community.sys.ini
+++ b/components/com_kunena/admin/language/de-DE/de-DE.plg_kunena_community.sys.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -34,7 +34,7 @@ PLG_KUNENA_COMMUNITY_ACTIVITY_STREAM_LIMIT="Activity Stream Limit"
 PLG_KUNENA_COMMUNITY_ACTIVITY_STREAM_LIMIT_DESC="Die Ziffer 0 steht für unbegrenzt, andernfalls wird im Activity Stream die Nachricht auf die eingegebene Anzahl der Zeichen limitiert. Diese Einstellung wirkt für den Zeitpunkt der Erstellung. Wenn ein Activity Stream geschrieben wurde, kann er im Nachhinein nicht mehr aktualisiert werden."
 PLG_KUNENA_COMMUNITY_ACTIVITY_POST_TITLE="hat ein neues Thema &bdquo;%s&ldquo; im Forum erstellt."
 
-PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_TITLE="hat auf das Thema &bdquo;%s&ldquo; im Forum beantwortet."
+PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_TITLE="hat auf das Thema &bdquo;%s&ldquo; im Forum geantwortet."
 PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_TITLE_ACT="{actor} antwortete auf das Thema {title} im Forum."
 PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_WALL="<a href=\\"_QQ_"%s\\"_QQ_">%s</a> es wurde zum Thema geantwortet <a href=\\"_QQ_"%s\\"_QQ_">%s</a>"
 PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_TEXT="Hallo {target},\n\n <b>{actor}</b> hat soeben auf ein Thema geantwortet. <strong>{title}</strong>\n\nURL:\n\n\n<a href="_QQ_"{url}"_QQ_">{url}</a>"
