--- a/components/com_kunena/admin/language/eu-ES/eu-ES.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/eu-ES/eu-ES.com_kunena.sys.ini
@@ -58,7 +58,7 @@ COM_KUNENA_MENU_SELECTEDVIEW="Aukeratu Ikuspegia"
 COM_KUNENA_MENU_TOPIC_CREATE="Gaia Sortu"
 COM_KUNENA_MENU_TOPIC_EDIT="Gaia Editatu"
 COM_KUNENA_MENU_TOPIC_REPLY="Gaiari Erantzun"
-; COM_KUNENA_MENU_USERID="Userid"
+; COM_KUNENA_MENU_USERID="UserId"
 COM_KUNENA_SHOW_12_HOURS="12 orduak"
 COM_KUNENA_SHOW_24_HOURS="24 ordutan"
 COM_KUNENA_SHOW_48_HOURS="48 orduak"
