--- a/components/com_kunena/admin/language/hr-HR/hr-HR.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/hr-HR/hr-HR.com_kunena.sys.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -58,7 +58,7 @@ COM_KUNENA_MENU_SELECTEDVIEW="Odaberite pregled"
 COM_KUNENA_MENU_TOPIC_CREATE="Kreiraj temu"
 COM_KUNENA_MENU_TOPIC_EDIT="Uredi temu"
 COM_KUNENA_MENU_TOPIC_REPLY="Odgovori na temu"
-; COM_KUNENA_MENU_USERID="Userid"
+; COM_KUNENA_MENU_USERID="UserId"
 COM_KUNENA_SHOW_12_HOURS="12 sati"
 COM_KUNENA_SHOW_24_HOURS="24 sata"
 COM_KUNENA_SHOW_48_HOURS="48 sati"
