--- a/components/com_kunena/admin/language/it-IT/it-IT.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/it-IT/it-IT.com_kunena.views.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -485,11 +485,6 @@ COM_KUNENA_A_IP_TRACKING="Tracciamento Indirizzo IP"
 COM_KUNENA_A_IP_TRACKING_DESC="Se impostato su <em>Sì</em>, il forum registrerà l'indirizzo IP per ogni messaggio postato (esclusa la funzione post anonimi). Sebbene la funzionalità possa essere utile contro lo spam e gli utenti falsi, il salvataggio degli indirizzi IP senza il consenso degli utenti potrebbe essere illegali in alcuni Paesi."
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Permetti agli ospiti di vedere il link Statistiche"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Imposta a Si per permettere agli ospiti di vedere il link Statistiche."
-
-COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Mostra Super Utenti nella lista utenti"
-COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Visualizzare i Super Utenti nella lista utenti?"
-COM_KUNENA_CONFIGURATION_EBAY_API_KEY_LABEL="Chiave AppID Ebay"
-COM_KUNENA_CONFIGURATION_EBAY_API_KEY_DESC="È necessario inserire l'AppID sul tuo account sviluppatore ebay, è necessario registrarsi sul https://go.developer.ebay.com/ al fine di ottenere l'AppID"
 ; COM_KUNENA_ADMIN_CONFIG_USERLIST_SETTINGS="Userlist Settings"
 ; COM_KUNENA_A_USER_CAN_SEND_OWN_REPORT="User can report himself"
 ; COM_KUNENA_A_USER_CAN_SEND_OWN_REPORT_DESC="Set to Yes if you want users can report himself on the messages"
