--- a/components/com_kunena/admin/language/ja-JP/ja-JP.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/ja-JP/ja-JP.com_kunena.sys.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -58,7 +58,7 @@ COM_KUNENA_MENU_SELECTEDVIEW="ビューを選択"
 COM_KUNENA_MENU_TOPIC_CREATE="トピックの作成"
 COM_KUNENA_MENU_TOPIC_EDIT="トピックの編集"
 COM_KUNENA_MENU_TOPIC_REPLY="トピックに返信"
-COM_KUNENA_MENU_USERID="ユーザID"
+; COM_KUNENA_MENU_USERID="UserId"
 COM_KUNENA_SHOW_12_HOURS="12時間"
 COM_KUNENA_SHOW_24_HOURS="24時間"
 COM_KUNENA_SHOW_48_HOURS="48時間"
