--- a/components/com_kunena/admin/language/pl-PL/pl-PL.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/pl-PL/pl-PL.com_kunena.views.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -485,10 +485,6 @@ COM_KUNENA_A_IP_TRACKING="Śledzenie Adresu IP"
 COM_KUNENA_A_IP_TRACKING_DESC="Jeśli ustawisz na <em>Tak</em>, forum będzie zapisywać adresy IP każdego zamieszczonego posta (z wyłączeniem wysyłki anonimowej). Co prawda może to być bardzo pomocne w walce ze spamem i oszustami sieciowymi, ale przechowywanie adresów IP bez uzyskania zgody użytkowników może być w pewnych krajach nielegalne."
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Pozwól gościom widzieć link do Statystyk"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Ustaw Tak aby wyświetlać gościom link do Statystyk."
-COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Pokaż Super Users na liście użytkowników"
-COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Pokazywać Super Users na liście użytkowników?"
-COM_KUNENA_CONFIGURATION_EBAY_API_KEY_LABEL="Klucz eBay AppID"
-COM_KUNENA_CONFIGURATION_EBAY_API_KEY_DESC="Musisz wpisać AppID otrzymany dla konta ebay developer, jeżeli go nie masz należy zarejestrować się tutaj: https://go.developer.ebay.com/ w celu otrzymania AppID"
 ; COM_KUNENA_ADMIN_CONFIG_USERLIST_SETTINGS="Userlist Settings"
 ; COM_KUNENA_A_USER_CAN_SEND_OWN_REPORT="User can report himself"
 ; COM_KUNENA_A_USER_CAN_SEND_OWN_REPORT_DESC="Set to Yes if you want users can report himself on the messages"
