--- a/components/com_kunena/admin/language/ro-RO/ro-RO.com_kunena.libraries.ini
+++ b/components/com_kunena/admin/language/ro-RO/ro-RO.com_kunena.libraries.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -16,8 +16,8 @@ COM_KUNENA_UNPUBLISHED="Nepublicat"
 
 COM_KUNENA_POST_ERROR_USER_BANNED_NOACCESS="Ai fost interzis! Nu ai acces la această funcție."
 COM_KUNENA_POST_ERROR_USER_BANNED_NOACCESS_EXPIRY="Ești interzis până în %s"
-COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE="Acest atașament este ascuns vizitatorilor. Autentificați-vă sau înregistrați-vă pentru a-l vedea."
-COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG="Imaginea este ascunsă vizitatorilor. Autentificați-vă sau înregistrați-vă pentru a o vedea."
+; COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE="<em>This attachment is hidden for guests.<br />Please log in or register to see it.</em>"
+; COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG="<em>This image is hidden for guests.<br />Please log in or register to see it.</em>"
 
 ; JROOT/administrator/components/com_kunena/libraries/access.php
 
