--- a/components/com_kunena/admin/language/ar-AA/ar-AA.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/ar-AA/ar-AA.com_kunena.sys.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -58,7 +58,7 @@ COM_KUNENA_MENU_SELECTEDVIEW="حدد عرض"
 COM_KUNENA_MENU_TOPIC_CREATE="انشاء موضوع جديد"
 COM_KUNENA_MENU_TOPIC_EDIT="تعديل الموضوع"
 COM_KUNENA_MENU_TOPIC_REPLY="الرد علي الموضوع"
-COM_KUNENA_MENU_USERID="هوية المستخدم"
+; COM_KUNENA_MENU_USERID="UserId"
 COM_KUNENA_SHOW_12_HOURS="12 ساعة"
 COM_KUNENA_SHOW_24_HOURS="24 ساعة"
 COM_KUNENA_SHOW_48_HOURS="48 ساعة"
