--- a/components/com_kunena/admin/language/da-DK/da-DK.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/da-DK/da-DK.com_kunena.sys.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -58,7 +58,7 @@ COM_KUNENA_MENU_SELECTEDVIEW="Vælg visning"
 COM_KUNENA_MENU_TOPIC_CREATE="Opret emne"
 COM_KUNENA_MENU_TOPIC_EDIT="Rediger emne"
 COM_KUNENA_MENU_TOPIC_REPLY="Besvar emne"
-COM_KUNENA_MENU_USERID="Bruger ID"
+; COM_KUNENA_MENU_USERID="UserId"
 COM_KUNENA_SHOW_12_HOURS="12 timer"
 COM_KUNENA_SHOW_24_HOURS="24 timer"
 COM_KUNENA_SHOW_48_HOURS="48 Timer"
