--- a/components/com_kunena/admin/language/es-ES/es-ES.com_kunena.libraries.ini
+++ b/components/com_kunena/admin/language/es-ES/es-ES.com_kunena.libraries.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -47,10 +47,14 @@ COM_KUNENA_LIB_BBCODE_SPOILER_EXPAND="[ Clic para expandir ]"
 COM_KUNENA_LIB_BBCODE_SPOILER_HIDE="[ Clic para ocultar ]"
 COM_KUNENA_POST_WROTE="escribió"
 COM_KUNENA_LIB_BBCODE_QUOTE_TITLE="CIta:"
+; COM_KUNENA_LIB_BBCODE_TWEET_STATUS_LINK="See the tweet status inserted in this message."
 COM_KUNENA_LIB_BBCODE_EBAY_LABEL_BUY_IT_NOW="Comprar Ahora"
 COM_KUNENA_LIB_BBCODE_EBAY_LABEL_COMPLETED="Completado"
 COM_KUNENA_LIB_BBCODE_EBAY_ERROR_WRONG_ITEM_ID="La id del elemento ebay aportado no es válido, no se ha enviado ningún resultado"
 COM_KUNENA_LIB_BBCODE_EBAY_INVALID_APPID_KEY="No has configurado la clave AppID eBay en la configuración de Kunena, por favor borra el cache antes de reintentarlo"
+; COM_KUNENA_LIB_BBCODE_TWITTER_COULD_NOT_GET_TOKEN="Could not retrieve bearer token (consumer)"
+; COM_KUNENA_LIB_BBCODE_TWITTER_INVALID_TWEET_ID="The tweet ID given is invalid"
+; COM_KUNENA_LIB_BBCODE_TWITTER_CONSUMMER_KEY_SECRET_INVALID="Invalid consumer key/secret in configuration"
 
 ; JROOT/administrator/components/com_kunena/libraries/bbcode/editor.
 
