--- a/components/com_kunena/admin/language/fi-FI/fi-FI.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/fi-FI/fi-FI.com_kunena.sys.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -58,7 +58,7 @@ COM_KUNENA_MENU_SELECTEDVIEW="Valitse näkymä"
 COM_KUNENA_MENU_TOPIC_CREATE="Luo aihe"
 COM_KUNENA_MENU_TOPIC_EDIT="Aiheen muokkaus"
 COM_KUNENA_MENU_TOPIC_REPLY="Vastaus aiheeseen"
-COM_KUNENA_MENU_USERID="Userid"
+; COM_KUNENA_MENU_USERID="UserId"
 COM_KUNENA_SHOW_12_HOURS="12 tuntia"
 COM_KUNENA_SHOW_24_HOURS="24 tuntia"
 COM_KUNENA_SHOW_48_HOURS="48 tuntia"
