--- a/components/com_kunena/admin/language/hu-HU/hu-HU.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/hu-HU/hu-HU.com_kunena.sys.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -58,7 +58,7 @@ COM_KUNENA_MENU_SELECTEDVIEW="Nézet kiválasztása"
 COM_KUNENA_MENU_TOPIC_CREATE="Téma létrehozása"
 COM_KUNENA_MENU_TOPIC_EDIT="Téma szerkesztése"
 COM_KUNENA_MENU_TOPIC_REPLY="Válasz"
-COM_KUNENA_MENU_USERID="Felhasználó ID"
+; COM_KUNENA_MENU_USERID="UserId"
 COM_KUNENA_SHOW_12_HOURS="12 óra"
 COM_KUNENA_SHOW_24_HOURS="24 óra"
 COM_KUNENA_SHOW_48_HOURS="48 óra"
