--- a/components/com_kunena/admin/language/it-IT/it-IT.plg_system_kunena.sys.ini
+++ b/components/com_kunena/admin/language/it-IT/it-IT.plg_system_kunena.sys.ini
@@ -10,10 +10,10 @@
 
 
 PLG_SYSTEM_KUNENA="Sistema - Forum Kunena"
-PLG_SYSTEM_KUNENA_DESC="Sistema dei Plugin Kunena - Non annullare la pubblicazione o disinstallare"
-PLG_SYSTEM_KUNENA_JCONTENTPLUGINS="Supporto plugin dei contenuti di Joomla"
-PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_DESC="Settare <em>Sì</em> se si desidera attivare tutti i plugin dei contenuti di Joomla installati nel forum. Questa opzione consente di aggiungere il filtraggio parolacce e molto altro. Attenzione a non permettere agli utenti di eseguire attività senza privilegi."
-PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET="Attiva esecuzione dei plugin"
-PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET_DESC="Su quali dati vuoi eseguire i plugin dei contenuti di Joomla? (Tenere premuto il tasto CTRL per cliccarne più di uno)"
+PLG_SYSTEM_KUNENA_DESC="Kunena System Plugin - Prego non de-pubblicare o disinstallare"
+PLG_SYSTEM_KUNENA_JCONTENTPLUGINS="Supporto Plugin Joomla"
+PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_DESC="Settare <em>Sì</em> se si desidera attivare tutti i plugins installati contenuti Joomla nel tuo forum. Questa opzione consente di aggiungere il filtraggio di parole cattive e molto altro ancora. Basta essere attenti a non permettere agli utenti di eseguire qualsiasi compito senza privilegi."
+PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET="Attiva esecuzione plugins"
+PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET_DESC="Su quali dati vuoi eseguire le Joomla content plugin? (Tenere premuto il pulsante CTRL per cliccare su più di una)"
 PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET_TITLES="Titoli"
 PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET_BODIES="Corpi"
