--- a/components/com_kunena/admin/language/kz-KZ/kz-KZ.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/kz-KZ/kz-KZ.com_kunena.sys.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -58,7 +58,7 @@ COM_KUNENA_MENU_SELECTEDVIEW="Көрсетуді таңдау"
 COM_KUNENA_MENU_TOPIC_CREATE="Тақырыпты құру "
 COM_KUNENA_MENU_TOPIC_EDIT="Тақырыпты редакциялау"
 COM_KUNENA_MENU_TOPIC_REPLY="Тақырыпқа жауап беру"
-COM_KUNENA_MENU_USERID="ID пользователя"
+; COM_KUNENA_MENU_USERID="UserId"
 COM_KUNENA_SHOW_12_HOURS="12 сағат"
 COM_KUNENA_SHOW_24_HOURS="24 сағат"
 COM_KUNENA_SHOW_48_HOURS="Соңғы 48 сағатта"
