--- a/components/com_kunena/admin/language/lt-LT/lt-LT.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/lt-LT/lt-LT.com_kunena.sys.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -58,7 +58,7 @@ COM_KUNENA_MENU_SELECTEDVIEW="Pasirinkite peržiūrą"
 COM_KUNENA_MENU_TOPIC_CREATE="Sukurti temą"
 COM_KUNENA_MENU_TOPIC_EDIT="Redaguoti temą"
 COM_KUNENA_MENU_TOPIC_REPLY="Atsakyti į temą"
-COM_KUNENA_MENU_USERID="Nario id"
+COM_KUNENA_MENU_USERID="Nario ID"
 COM_KUNENA_SHOW_12_HOURS="12 valandų"
 COM_KUNENA_SHOW_24_HOURS="24 valandos"
 COM_KUNENA_SHOW_48_HOURS="48 valandos"
