--- a/components/com_kunena/admin/language/lt-LT/lt-LT.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/lt-LT/lt-LT.com_kunena.views.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -214,7 +214,7 @@ COM_KUNENA_A_FORUM_JUMP="Įgalinti peršokimą į forumą"
 COM_KUNENA_A_FORUM_JUMP_DESC="Jei nustatysite <em>Taip</em>, perjungėjas bus rodomas forumo puslapiuose, kuris leidžia greitai peršokti į kitą forumą arba kategoriją."
 COM_KUNENA_A_FRONTEND="Išorinė sąsaja"
 COM_KUNENA_A_GHOSTMESSAGE="Dėžutę pažymėtos pagal nutylėjimą?"
-; COM_KUNENA_A_GHOSTMESSAGE_DESC="Set to <em>Yes</em> if you want the post shadow topic box to be checked by default."
+COM_KUNENA_A_GHOSTMESSAGE_DESC="Nustatykite <em>Taip</em>, jei norite, kad dėžutės būtų pažymėtos pagal nutylėjimą."
 COM_KUNENA_A_HIGHLIGHTCODE="Įgalinti kodo paryškinimą"
 COM_KUNENA_A_HIGHLIGHTCODE_DESC="Leidžia Kunena kodo tegus pabrėžti Javascript'u. Jei nariai rašo PHP ar kito kodo fragmentus be kodo žymių, įgalinus tai, kodas bus nuspalvintas. Jei Jūsų forumas nenaudoja tokių programavimo kalbos žinučių, galite išjungti tai, kad išvengti kodo žymių iš gaunamų formų."
 COM_KUNENA_A_HISTLIM="Istorijos limitas"
