--- a/components/com_kunena/admin/language/pt-PT/pt-PT.com_kunena.libraries.ini
+++ b/components/com_kunena/admin/language/pt-PT/pt-PT.com_kunena.libraries.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -354,8 +354,8 @@ COM_KUNENA_LIB_TEMPLATE_MOOTOOLS_LEGACY="O seu site não está a utilizar o plug
 COM_KUNENA_LIB_TEMPLATE_MOOTOOLS_NO_UPGRADE="O plugin <em>Sistema - Atualização MooTools</em> não esta instalado no seu sistema."
 COM_KUNENA_LIB_TEMPLATE_MOOTOOLS_WARNING="Alguns recursos, incluindo o editor BBCode, podem estar danificados."
 COM_KUNENA_LIB_TEMPLATE_NOTICE_INCOMPATIBLE="Kunena: modelo %s incompatível, utilize %s como alternativa."
-
 ; COM_KUNENA_A_TEMPLATE_MANAGER_NO_LESS="This template has no Less files"
+
 
 ; JROOT/administrator/components/com_kunena/libraries/user/ban.php
 
