--- a/components/com_kunena/admin/language/pt-PT/pt-PT.plg_system_kunena.sys.ini
+++ b/components/com_kunena/admin/language/pt-PT/pt-PT.plg_system_kunena.sys.ini
@@ -10,7 +10,7 @@
 
 
 PLG_SYSTEM_KUNENA="Sistema - Fórum Kunena"
-PLG_SYSTEM_KUNENA_DESC="Plugin de sistema Kunena - Por favor, não despublicar ou desinstalar"
+PLG_SYSTEM_KUNENA_DESC="Kunena Sistema Plugin - Por favor, não despublicar ou desinstalar"
 PLG_SYSTEM_KUNENA_JCONTENTPLUGINS="Suporte para o Plugin de Conteúdo Joomla"
 PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_DESC="Selecionar <em>Sim</em> se quiser ativar no fórum todos os plugins de conteúdo instalados no Joomla. Esta opção permite adicionar filtros de palavras e muito mais. Tenha cuidado para não permitir aos utilizadores executarem tarefas não permitidas."
 PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET="Executar plugins ligados"
