--- a/components/com_kunena/admin/language/ru-RU/ru-RU.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/ru-RU/ru-RU.com_kunena.sys.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -58,7 +58,7 @@ COM_KUNENA_MENU_SELECTEDVIEW="Выбор показа"
 COM_KUNENA_MENU_TOPIC_CREATE="Создать тему"
 COM_KUNENA_MENU_TOPIC_EDIT="Изменить тему"
 COM_KUNENA_MENU_TOPIC_REPLY="Ответить в теме"
-COM_KUNENA_MENU_USERID="ID пользователя"
+; COM_KUNENA_MENU_USERID="UserId"
 COM_KUNENA_SHOW_12_HOURS="За 12 часов"
 COM_KUNENA_SHOW_24_HOURS="За 24 часа"
 COM_KUNENA_SHOW_48_HOURS="За 48 часов"
