--- a/components/com_kunena/admin/language/sk-SK/sk-SK.plg_kunena_community.sys.ini
+++ b/components/com_kunena/admin/language/sk-SK/sk-SK.plg_kunena_community.sys.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -35,15 +35,13 @@ PLG_KUNENA_COMMUNITY_ACTIVITY_STREAM_LIMIT_DESC="0 pre neobmedzene, inak stream 
 PLG_KUNENA_COMMUNITY_ACTIVITY_POST_TITLE="vytvorená nová téma '%s' na fóre."
 
 PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_TITLE="Odpoveď na tému '%s' na fóre."
+PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_TITLE_ACT="{actor} odpovedal na tému {title} v tomto fóre."
+PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_WALL="<a href=\\"_QQ_"%s\\"_QQ_">%s</a> odpovedal na tému <a href=\\"_QQ_"%s\\"_QQ_">%s</a> v tomto fóre"
+PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_TEXT="Dobrý deň {target},\n\n <b>{actor}</b> odpovedal na tému  <strong>{title}</strong>\n\nURL:\n\n\n<a href="_QQ_"{url}"_QQ_">{url}</a>"
 
-; PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_TITLE_ACT="{actor} replied to the topic {title} in the forum."
-; PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_WALL="<a href=\\"_QQ_"%s\\"_QQ_">%s</a> replied to the topic <a href=\\"_QQ_"%s\\"_QQ_">%s</a> in the forum"
-; PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_TEXT="Hello {target},\n\n <b>{actor}</b> just replied to a topic  <strong>{title}</strong>\n\nURL:\n\n\n<a href="_QQ_"{url}"_QQ_">{url}</a>"
-
-; PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_TITLE_ACT="{actor} thanked you in topic {title}."
-; PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_WALL="<a href=\\"_QQ_"%s\\"_QQ_">%s</a> thanked <a href=\\"_QQ_"%s\\"_QQ_">%s</a> in topic <a href=\\"_QQ_"%s\\"_QQ_">%s</a>"
-; PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_TEXT="Hi {target},\nUser {actor} thanked you for the post in topic {title}. \nURL: \n\n <a href="_QQ_"{url}"_QQ_">{url}</a>"
-
+PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_TITLE_ACT="{actor} poďakoval za príspevok {title}."
+PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_WALL="<a href=\\"_QQ_"%s\\"_QQ_">%s</a> poďakoval <a href=\\"_QQ_"%s\\"_QQ_">%s</a> za príspevok <a href=\\"_QQ_"%s\\"_QQ_">%s</a>"
+PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_TEXT="Dobrý deň {target},\nUžívateľ {actor} Vám poďakoval za príspevok v téme {title}. \nURL: \n\n <a href="_QQ_"{url}"_QQ_">{url}</a>"
 PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_TITLE="Ďakujeme užívateľ '%s' za správu na fóre '%s'."
 
 COM_KUNENA_INTEGRATION_TYPE_JOMSOCIAL="JomSocial"
