--- a/components/com_kunena/admin/language/zh-CN/zh-CN.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/zh-CN/zh-CN.com_kunena.sys.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -58,7 +58,7 @@ COM_KUNENA_MENU_SELECTEDVIEW="选择视图"
 COM_KUNENA_MENU_TOPIC_CREATE="新建主题"
 COM_KUNENA_MENU_TOPIC_EDIT="编辑主题"
 COM_KUNENA_MENU_TOPIC_REPLY="回复主题"
-COM_KUNENA_MENU_USERID="用户ID"
+; COM_KUNENA_MENU_USERID="UserId"
 COM_KUNENA_SHOW_12_HOURS="12 小时内"
 COM_KUNENA_SHOW_24_HOURS="24 小时内"
 COM_KUNENA_SHOW_48_HOURS="48 小时内"
