--- a/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.tpl_blue_eagle.ini
@@ -1,4 +1,4 @@
-﻿; Kunena Forum translation
+; Kunena Forum translation
 ;
 ; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
@@ -131,6 +131,7 @@ COM_KUNENA_TEMPLATE_LAST_POST_SUBJECT_LENGTH_DESC = "Ustaw liczbę znaków do wy
 ; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
 ; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
 ; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
+
 
 ; Removed strings
 
