Add settings for auto-subscribe cats for new users and uncomment it

--- a/plugins/plg_system_kunena/language/en-GB/en-GB.plg_system_kunena.sys.ini
+++ b/plugins/plg_system_kunena/language/en-GB/en-GB.plg_system_kunena.sys.ini
@@ -17,3 +17,9 @@ PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET="Run plugins on"
 PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET_DESC="Which data do you want to run Joomla content plugins on? (Hold down CTRL key to click on more)"
 PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET_TITLES="Titles"
 PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET_BODIES="Bodies"
+PLG_SYSTEM_KUNENA_SUSBSCRIBE_ALL_CATS_LABEL="Subscribe users to all categories"
+PLG_SYSTEM_KUNENA_SUSBSCRIBE_ALL_CATS_DESC="Subscribe automatically the new users after their registration to all categories. Enable this if you are sure what you are doing because it can impact the performance."
+PLG_SYSTEM_KUNENA_SUSBSCRIBE_BLOCKED_ALL_CATS_LABEL="Subscribe blocked users to all categories"
+PLG_SYSTEM_KUNENA_SUSBSCRIBE_BLOCKED_ALL_CATS_DESC="Subscribe automatically the new users and the blocked users after their registration to all categories. Enable this if you are sure what you are doing because it can impact the performance."
+PLG_SYSTEM_KUNENA_SUSBSCRIBE_ALL_CATS_LIST_LABEL="Enter categories list separated by commas."
+PLG_SYSTEM_KUNENA_SUSBSCRIBE_ALL_CATS_LIST_DESC="Enter the categories list separated by commas where the users will be subscribed."
